tests/specs/ecosystem/bureaudouble_forks/use_isomorphic_layout_effect/0_0_1.test
bureaudouble-forks/use-isomorphic-layout-effect/0.0.1
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
error: TS2584 [ERROR]: Cannot find name 'document'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
export default typeof document !== 'undefined' ? useLayoutEffect : useEffect;
                      ~~~~~~~~
    at file://<tmpdir>/src/index.ts:2:23

